# eloquent-core

./: AUTHORS.txt  Application.cpp  Application.h  CMakeLists.txt  LICENSE.txt  README.md  README.txt  main.cpp
Config/: com.evrichart.eloquentd.conf  com.evrichart.eloquentd.plist  eloquent.conf  eloquentd.conf  extensions.conf
Config/etc-eloquent/: eloquent.conf
Config/etc-init/: eloquentd.conf
Config/etc-logrotate.d/: eloquentd
Internal/: Attach.h  Logging.cpp  Logging.h  QueueItem.cpp  QueueItem.h
Internal/Coordinators/: FilterCoordinator.cpp  FilterCoordinator.h
Internal/Extensions/: Extension.cpp  Extension.h  ExtensionFactory.cpp  ExtensionFactory.h  ExtensionManager.cpp  ExtensionManager.h  FilterExtension.cpp  FilterExtension.h  FilterExtensionFactory.h  IOExtension.cpp  IOExtension.h  IOExtensionFactory.cpp  IOExtensionFactory.h  QueueItem.cpp  QueueItem.h  Sink.h
Internal/Extensions/Factories/: ExtensionFactory.cpp  ExtensionFactory.h  FilterExtensionFactory.cpp  FilterExtensionFactory.h  IOExtensionFactory.cpp  IOExtensionFactory.h
Internal/Extensions/Filters/: Filter.cpp  Filter.h  FilterFactory.cpp  FilterFactory.h  RegexFilter.cpp  RegexFilter.h  RegexFilterAttach.cpp  RegexFilterAttach.h  RegexFilterFactory.cpp  RegexFilterFactory.h  Sink.cpp
Internal/Extensions/IO/: IO.cpp  IO.h  IOFactory.cpp  IOFactory.h
eloquentd.xcodeproj/: project.pbxproj
eloquentd.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
eloquentd.xcodeproj/project.xcworkspace/xcshareddata/: eloquentd.xccheckout
eloquentd.xcodeproj/project.xcworkspace/xcuserdata/nathanwehr.xcuserdatad/: UserInterfaceState.xcuserstate
eloquentd.xcodeproj/xcuserdata/nathanwehr.xcuserdatad/xcschemes/: Eloquent.xcscheme  Makefile.xcscheme  eloquentd.xcscheme  xcschememanagement.plist
